--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="bcsf18a534">BCSF18A534</string>
+    <string name="samim_zubair">SAMIM ZUBAIR</string>
+    <string name="move_to_app">MOVE TO APP</string>
+    <string name="move_to_repo">MOVE TO REPO</string>
+    <string name="todo">TODO</string>
 </resources>
